--- a/index.html
+++ b/index.html
@@ -89,10 +89,8 @@
       <section class="not-found section-messege" style="display: none">
         <img src="assets/message/not-found.png" />
         <div class="search-info">
-          <h1>Search city</h1>
-          <h4 class="regular-text">
-            Find out the weather condittions of the city
-          </h4>
+          <h1>city not found</h1>
+          <h4 class="regular-text">Please right the city name right</h4>
         </div>
       </section>
     </main>
