--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <img src="assets/message/not-found.png" />
         <div class="search-info">
           <h1>city not found</h1>
-          <h4 class="regular-text">Please right the city name right</h4>
+          <h4 class="regular-text">Please write the city name right</h4>
         </div>
       </section>
     </main>
